Perkin-UAT/force-app/main/default/objects/Requests__c/Requests__c.object-meta.xml
<CustomObject>
    <description>Ticketing system for all Salesforce-related user requests. Linked to JIRA</description>
    <label>Request</label>
    <nameField>
        <displayFormat>RN-{0000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>