Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Affected_PKI_Application__c.field-meta.xml
<CustomField>
    <fullName>Affected_PKI_Application__c</fullName>
    <description>This field is also used to map to the JIRA Project ID through the JIRA/SFDC integration.</description>
    <inlineHelpText>Select the Application which you require assistance with</inlineHelpText>
    <label>I Need Assistance With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FPX Firepond</fullName>
                <isActive>false</isActive>
                <label>FPX Firepond</label>
            </value>
            <value>
                <fullName>Lightning Experience</fullName>
            </value>
            <value>
                <fullName>Order Visibility</fullName>
            </value>
            <value>
                <fullName>QuoteStudio</fullName>
            </value>
            <value>
                <fullName>Quote Studio</fullName>
                <isActive>false</isActive>
                <label>Quote Studio</label>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>SalesForce</fullName>
                <isActive>false</isActive>
                <label>SalesForce</label>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>ServiceMax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>