Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Affected_Region_s__c.field-meta.xml
<CustomField>
    <fullName>Affected_Region_s__c</fullName>
    <inlineHelpText>This field identifies the regions that are included in the scope of the Request</inlineHelpText>
    <label>Affected Region(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>