Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age in days between when the request was created versus closed/rejected or between the date created and today if it is still in an open status</description>
    <formula>IF (((TEXT(Request_Status__c))= &quot;Done&quot; ||
(TEXT(Request_Status__c))= &quot;Done&quot; ||
(TEXT(Request_Status__c))= &quot;Rejected&quot;), (PKI_Close_Date__c  - DATEVALUE(CreatedDate)),(DATEVALUE (NOW()) - DATEVALUE( CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If request is open then it is the number of days between when it was created and today otherwise the number of days between when it was created and closed/rejected</inlineHelpText>
    <label>Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>