Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Bug_Details__c.field-meta.xml
<CustomField>
    <fullName>Bug_Details__c</fullName>
    <inlineHelpText>Enter information about the bug. Feel free to include links and screenshots to help clarify the bug that you experienced.</inlineHelpText>
    <label>Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>