Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Co_Owner__c.field-meta.xml
<CustomField>
    <fullName>Co_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>