Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Co_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Co_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>