Perkin-UAT/force-app/main/default/objects/Requests__c/fields/customer_comm__c.field-meta.xml
<CustomField>
    <fullName>customer_comm__c</fullName>
    <inlineHelpText>Enter any infomation that needs to be communicated to requestor</inlineHelpText>
    <label>Customer Communication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>