Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Date_Needed__c.field-meta.xml
<CustomField>
    <fullName>Date_Needed__c</fullName>
    <description>Date the requestor would like the work completed by.</description>
    <inlineHelpText>Date the requestor would like the work completed by.</inlineHelpText>
    <label>Date Needed</label>
    <type>Date</type>
</CustomField>