Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Escalated_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Date__c</fullName>
    <description>Date which operations escalated to IT support</description>
    <inlineHelpText>Date which operations escalated to IT support</inlineHelpText>
    <label>Escalated Date</label>
    <type>Date</type>
</CustomField>