Perkin-UAT/force-app/main/default/objects/Requests__c/fields/I_know_this_is_done_when__c.field-meta.xml
<CustomField>
    <fullName>I_know_this_is_done_when__c</fullName>
    <inlineHelpText>List the steps or conditions that will let the developer know when the User Story is completed.</inlineHelpText>
    <label>I know this is done when</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>