Perkin-UAT/force-app/main/default/objects/Requests__c/fields/I_want_to__c.field-meta.xml
<CustomField>
    <fullName>I_want_to__c</fullName>
    <inlineHelpText>Enter the request in this field. Example of an entry into the &quot;I want to&quot; field: &quot;be able to click a button and have the contact&#39;s mailing address match the account&#39;s shipping address&quot;.</inlineHelpText>
    <label>I want to</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>