Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status__c</fullName>
    <label>Internal Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>