Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Time__c</fullName>
    <description>This field is used to display the time portion in addition to the date portion of the Last Modified Date</description>
    <formula>LastModifiedDate</formula>
    <label>Last Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>