Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Level1_Duration__c.field-meta.xml
<CustomField>
    <fullName>Level1_Duration__c</fullName>
    <formula>IF
(!ISBLANK(Escalated_Date__c),
(Escalated_Date__c -  DATEVALUE(CreatedDate)),
(Close_Date__c - DATEVALUE(CreatedDate)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 1 Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>