Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Level2_Duration__c.field-meta.xml
<CustomField>
    <fullName>Level2_Duration__c</fullName>
    <formula>Close_Date__c -  Escalated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 2 Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>