Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Name_of_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person requesting the work</description>
    <inlineHelpText>Person requesting the work</inlineHelpText>
    <label>Name of Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>