Perkin-UAT/force-app/main/default/objects/Requests__c/fields/NameOfRequestorText__c.field-meta.xml
<CustomField>
    <fullName>NameOfRequestorText__c</fullName>
    <formula>Name_of_Requestor__r.FirstName  + &#39; &#39; +  Name_of_Requestor__r.LastName</formula>
    <label>NameOfRequestorText</label>
    <type>Text</type>
</CustomField>