Perkin-UAT/force-app/main/default/objects/Requests__c/fields/PKI_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>PKI_Close_Date__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>