Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <description>Admin sets the priority during the triage/assessment stage</description>
    <inlineHelpText>Admin sets the priority during the triage/assessment stage</inlineHelpText>
    <label>Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
                <label>2 - High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>3 - Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <label>4 - Low</label>
            </value>
            <value>
                <fullName>5 - Nice to Have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>