Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Details on why the request was rejected</description>
    <inlineHelpText>Details on why the request was rejected</inlineHelpText>
    <label>Reason for Rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>