Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Request_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Completion_Date__c</fullName>
    <description>This is the date which support is estimating for completion of the request</description>
    <inlineHelpText>This is the date which support is estimating for completion of the request</inlineHelpText>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>