Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <description>The field level security is intentionally set to Read-Only for all profiles except for System Administrator and Delegated Administrator.</description>
    <inlineHelpText>Submitted
Assessment - analyzing what is required and whether can be done
In Progress - work has started
Testing
Ready for Release - work has been completed but not deployed
Done - deployed into production
Rejected
On Hold - waiting for more info</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Ready for Release</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Request Closed</fullName>
                <isActive>false</isActive>
                <label>Request Closed</label>
            </value>
            <value>
                <fullName>Request Completed</fullName>
                <isActive>false</isActive>
                <label>Request Completed</label>
            </value>
            <value>
                <fullName>Request Verification</fullName>
                <isActive>false</isActive>
                <label>Request Verification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>