Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Request_Summary__c.field-meta.xml
<CustomField>
    <fullName>Request_Summary__c</fullName>
    <description>Summary of request (up to 50 characters)</description>
    <inlineHelpText>Summary of request (up to 50 characters)</inlineHelpText>
    <label>Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>