Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Requestor_SBE__c.field-meta.xml
<CustomField>
    <fullName>Requestor_SBE__c</fullName>
    <description>SBE of requestor from their user profile</description>
    <formula>text(Name_of_Requestor__r.Business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SBE of requestor from their user profile</inlineHelpText>
    <label>Requestor SBE</label>
    <type>Text</type>
</CustomField>