Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Scheduled_Release__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Release__c</fullName>
    <description>Indicates the name of the release cycle from JIRA</description>
    <inlineHelpText>Indicates the name of the release cycle from JIRA</inlineHelpText>
    <label>Scheduled Release</label>
    <length>20</length>
    <type>Text</type>
</CustomField>