Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <label>Support Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level - 1</fullName>
                <default>true</default>
                <label>Level - 1</label>
            </value>
            <value>
                <fullName>Level - 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>