Perkin-UAT/force-app/main/default/objects/Requests__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IMAGE ( 
case ( RecordType.Name, 
&quot;Help Request&quot;,&quot;/servlet/servlet.FileDownload?file=0153A000003l37D&quot;, 
&quot;Improvement Request&quot;,&quot;/servlet/servlet.FileDownload?file=0153A000003l379&quot;, 
&quot;New Feature Request&quot;,&quot;/servlet/servlet.FileDownload?file=0153A000003l377&quot;, 
&quot;/servlet/servlet.FileDownload?file=0153A000003l37D&quot;), 
&quot;Type&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>