Perkin-UAT/force-app/main/default/objects/Requests__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>Help - Paste the link to the page which you are having problems with
Improvement - Paste the link to the page
New Feature - paste the link to additional information</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>