Perkin-UAT/force-app/main/default/objects/Requests__c/recordTypes/Help_Request.recordType-meta.xml
<RecordType>
    <fullName>Help_Request</fullName>
    <active>true</active>
    <description>Use this record type to request for assistance</description>
    <label>Help</label>
</RecordType>