Perkin-UAT/force-app/main/default/objects/Requests__c/recordTypes/Improvement_Request.recordType-meta.xml
<RecordType>
    <fullName>Improvement_Request</fullName>
    <active>true</active>
    <description>Use this record type to request improvements to existing features or functionality</description>
    <label>Improvement</label>
</RecordType>