Perkin-UAT/force-app/main/default/objects/Requests__c/recordTypes/New_Feature_Request.recordType-meta.xml
<RecordType>
    <fullName>New_Feature_Request</fullName>
    <active>true</active>
    <description>Use this record type to request new features and functionality</description>
    <label>New Feature</label>
</RecordType>