Perkin-UAT/force-app/main/default/objects/Requests__c/recordTypes/Report_a_Bug.recordType-meta.xml
<RecordType>
    <fullName>Report_a_Bug</fullName>
    <active>true</active>
    <description>Use this record type to report a bug with a Sales Application</description>
    <label>Report a Bug</label>
</RecordType>