Perkin-UAT/force-app/main/default/objects/Requests__c/listViews/All_Open_DO_NOT_ALTER.listView-meta.xml
<ListView>
    <fullName>All_Open_DO_NOT_ALTER</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Close_Date__c</columns>
    <columns>Request_Summary__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Name_of_Requestor__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Age__c</columns>
    <columns>Request_Completion_Date__c</columns>
    <columns>Affected_PKI_Application__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Affected_PKI_Application__c</field>
        <operation>equals</operation>
        <value>,Sales Cloud,Lightning Experience,Order Visibility</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Assessment,In Progress,Testing,Ready for Release</value>
    </filters>
    <label>All Open_DO NOT ALTER</label>
    <language>en_US</language>
</ListView>