Perkin-UAT/force-app/main/default/objects/Requests__c/listViews/Requests_DAS_Queue_Requests.listView-meta.xml
<ListView>
    <fullName>Requests_DAS_Queue_Requests</fullName>
    <filterScope>Queue</filterScope>
    <label>Requests - DAS Queue</label>
    <queue>ARQ_000655</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>