Perkin-UAT/force-app/main/default/objects/Requests__c/listViews/Requests_LST_Queue_Requests.listView-meta.xml
<ListView>
    <fullName>Requests_LST_Queue_Requests</fullName>
    <filterScope>Queue</filterScope>
    <label>Requests - LST Queue</label>
    <queue>ARQ_000658</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>