Perkin-UAT/force-app/main/default/objects/Requests__c/listViews/Requests_QUICK_FILTER.listView-meta.xml
<ListView>
    <fullName>Requests_QUICK_FILTER</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Requests (*QUICK FILTER*)</label>
</ListView>